; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_funchook.c_hook_init.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_funchook.c_hook_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.func_hook = type { i64, i64, i8*, i32 }

@JMP_32_SIZE = common dso_local global i64 0, align 8
@JMP_64_SIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hook_init(%struct.func_hook* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.func_hook*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store %struct.func_hook* %0, %struct.func_hook** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load %struct.func_hook*, %struct.func_hook** %5, align 8
  %10 = call i32 @memset(%struct.func_hook* %9, i32 0, i32 32)
  %11 = load i8*, i8** %6, align 8
  %12 = ptrtoint i8* %11 to i64
  %13 = load %struct.func_hook*, %struct.func_hook** %5, align 8
  %14 = getelementptr inbounds %struct.func_hook, %struct.func_hook* %13, i32 0, i32 0
  store i64 %12, i64* %14, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = ptrtoint i8* %15 to i64
  %17 = load %struct.func_hook*, %struct.func_hook** %5, align 8
  %18 = getelementptr inbounds %struct.func_hook, %struct.func_hook* %17, i32 0, i32 1
  store i64 %16, i64* %18, align 8
  %19 = load i8*, i8** %8, align 8
  %20 = load %struct.func_hook*, %struct.func_hook** %5, align 8
  %21 = getelementptr inbounds %struct.func_hook, %struct.func_hook* %20, i32 0, i32 2
  store i8* %19, i8** %21, align 8
  %22 = load %struct.func_hook*, %struct.func_hook** %5, align 8
  %23 = getelementptr inbounds %struct.func_hook, %struct.func_hook* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @JMP_32_SIZE, align 8
  %26 = sub i64 %24, %25
  %27 = inttoptr i64 %26 to i8*
  %28 = load i64, i64* @JMP_64_SIZE, align 8
  %29 = load i64, i64* @JMP_32_SIZE, align 8
  %30 = add i64 %28, %29
  %31 = call i32 @fix_permissions(i8* %27, i64 %30)
  %32 = load %struct.func_hook*, %struct.func_hook** %5, align 8
  %33 = getelementptr inbounds %struct.func_hook, %struct.func_hook* %32, i32 0, i32 3
  %34 = load i32, i32* %33, align 8
  %35 = load i8*, i8** %6, align 8
  %36 = load i64, i64* @JMP_64_SIZE, align 8
  %37 = call i32 @memcpy(i32 %34, i8* %35, i64 %36)
  ret void
}

declare dso_local i32 @memset(%struct.func_hook*, i32, i32) #1

declare dso_local i32 @fix_permissions(i8*, i64) #1

declare dso_local i32 @memcpy(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
